# AI_labyrinth

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  pyproject.toml
src/ai_labyrinth/ai/: model.py
src/ai_labyrinth/app/: AI_labyrinth_generator.py  ai_labyrinth_generator.py  createMaze.py  create_dataset.py  main.py
src/ai_labyrinth/training/: ai_labyrinth_generator.py  create_dataset.py
